--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #f5f3ed;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,10 +28,6 @@ header {
   width: 100%;
 }
 
-.socialimg {
-  background: url(github.png)
-}
-
 .home {
   display:flex;
   flex:1;
@@ -51,10 +47,10 @@ h1, h2, h3 {
 }
 
 h1 { font-size: 38px; line-height: 42px; margin-bottom: 12px; letter-spacing: -1px; }
-h2 { font-size: 28px; line-height: 36px; margin-bottom: 6px; }
+h2 { font-size: 28px; line-height: 1.2; margin-bottom: 6px; }
 
 .home h1 {
-  font: 90px/1.1em 'opensans-bold', sans-serif;
+  font: 4em 'opensans-bold', sans-serif;
   color: #fff;
   letter-spacing: -2px;
   margin: 0 auto 18px auto;
@@ -62,8 +58,8 @@ h2 { font-size: 28px; line-height: 36px; margin-bottom: 6px; }
   text-align: center;
 }
 
-.home h3 {
-  font: 20px/1.9em 'librebaskerville-regular', serif;
+.home h3, .cse154page h3 {
+  font: 1em 'librebaskerville-regular', serif;
   color: rgb(255, 255, 255);
   margin: 0 auto;
   width: 70%;
@@ -71,28 +67,8 @@ h2 { font-size: 28px; line-height: 36px; margin-bottom: 6px; }
   text-align: center;
 }
 
-@media only screen and (max-width: 480px){
-  h3 {
-      width: 90%;
-      font: 14px / 1.9em librebaskerville-regular, sans-serif;
-  }
-}
-
-@media only screen and (max-width: 767px) {
- h1 { font: 68px/1.1em 'opensans-bold', sans-serif; }
- h3 {
-    font: 16px/1.9em 'librebaskerville-regular', serif;
-    width: 85%;
- }
-
- /* header social links */
- .social {
-    margin: 18px 0 24px 0;
-    font-size: 24px;
-    line-height: 36px;
- }
- .social li { margin: 0 10px; }
-
+.hidden {
+  display: none;
 }
 
 /* Contact stuff */
@@ -104,18 +80,70 @@ h2 { font-size: 28px; line-height: 36px; margin-bottom: 6px; }
 }
 .social li {
   display: inline-block;
-  margin: 0 15px;
+  margin: 5px;
   padding: 0;
 }
 
+p {
+  font-size: calc(2px + 2vmin);
+  line-height: auto;
+}
+
+.personal {
+  padding: 10px;
+}
+
+.personal li {
+  font-size: calc(6px + 2vmin);
+}
+
+.personal > div {
+  border-bottom: 1px solid #E8E8E8;
+}
+
 /* ------------------------------------------------------------------ */
-/* d. Resume Section
+/* CSE 154 About Page Section
+/* ------------------------------------------------------------------ */
+
+.cse154page {
+  margin: 10px;
+  font-size: calc(4px + 2vmin);
+}
+
+.cse154page h3, .intro h1, .personal h1 {
+  font: 2em 'librebaskerville-regular', serif;
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: #11ABB0;
+  margin-top: 5px;
+}
+
+.cse154page .row {
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-bottom: 1px solid #E8E8E8;
+}
+
+.cse154page h1 {
+  font: 18px/24px 'opensans-bold', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  line-height: 200%;
+}
+.cse154page h1 span {
+  border-bottom: 3px solid #11ABB0;
+  padding-bottom: 6px;
+}
+
+
+/* ------------------------------------------------------------------ */
+/* Resume Section
 /* ------------------------------------------------------------------ */
 
 #resume {
   background: #fff;
-  padding-top: 90px;
-  padding-bottom: 72px;
+  /* padding-top: 90px; */
+  padding-bottom: 20px;
   overflow: hidden;
 }
 
@@ -144,10 +172,10 @@ h2 { font-size: 28px; line-height: 36px; margin-bottom: 6px; }
   font-family: 25px/30px 'opensans-bold', sans-serif;
 }
 
-#resume .header-col { padding-top: 9px; }
-#resume .main-col { padding-right: 10%; }
+/* #resume .header-col { padding-top: 9px; } */
+/* #resume .main-col { padding-right: 10%; } */
 
-.education, .work {
+.education, .work, .skill {
   margin-bottom: 48px;
   padding-bottom: 24px;
   border-bottom: 1px solid #E8E8E8;
@@ -244,77 +272,14 @@ body {
 .row .six         { width: 50%; }
 .row .seven       { width: 58.33333%; }
 .row .eight       { width: 66.66667%; }
-.row .nine        { width: 75%; }
+.row .nine        { width: 75%; padding-right: 10%;}
 .row .ten         { width: 83.33333%; }
 .row .eleven      { width: 91.66667%; }
 .row .twelve      { width: 100%; }
 
-/* Offsets */
-.row .offset-1    { margin-left: 8.33333%; }
-.row .offset-2    { margin-left: 16.66667%; }
-.row .offset-3    { margin-left: 25%; }
-.row .offset-4    { margin-left: 33.33333%; }
-.row .offset-5    { margin-left: 41.66667%; }
-.row .offset-6    { margin-left: 50%; }
-.row .offset-7    { margin-left: 58.33333%; }
-.row .offset-8    { margin-left: 66.66667%; }
-.row .offset-9    { margin-left: 75%; }
-.row .offset-10   { margin-left: 83.33333%; }
-.row .offset-11   { margin-left: 91.66667%; }
-
-/* Push/Pull */
-.row .push-1      { left: 8.33333%; }
-.row .pull-1      { right: 8.33333%; }
-.row .push-2      { left: 16.66667%; 	}
-.row .pull-2      { right: 16.66667%; }
-.row .push-3      { left: 25%; }
-.row .pull-3      { right: 25%;	}
-.row .push-4      { left: 33.33333%; }
-.row .pull-4      { right: 33.33333%; }
-.row .push-5      { left: 41.66667%; }
-.row .pull-5      { right: 41.66667%; }
-.row .push-6      { left: 50%; }
-.row .pull-6      { right: 50%; }
-.row .push-7      { left: 58.33333%; }
-.row .pull-7      { right: 58.33333%; }
-.row .push-8      { left: 66.66667%; 	}
-.row .pull-8      { right: 66.66667%; }
-.row .push-9      { left: 75%; }
-.row .pull-9      { right: 75%; }
-.row .push-10     { left: 83.33333%; }
-.row .pull-10     { right: 83.33333%; }
-.row .push-11     { left: 91.66667%; }
-.row .pull-11     { right: 91.66667%; }
-
-/* block grids
---------------------------------------------------------------------- */
-.bgrid-sixths [class*="column"]   { width: 16.66667%; }
-.bgrid-quarters [class*="column"] { width: 25%; }
-.bgrid-thirds [class*="column"]   { width: 33.33333%; }
-.bgrid-halves [class*="column"]   { width: 50%; }
-
-[class*="bgrid"] [class*="column"] + [class*="column"]:last-child { float: left; }
-
-/* Left clearing for block grid columns - columns that changes width in
-different screen sizes. Allows columns with different heights to align
-properly.
---------------------------------------------------------------------- */
-.first { clear: left; }   /* first column in default screen */
-.s-first { clear: none; } /* first column in smaller screens */
-
 /* smaller screens
 --------------------------------------------------------------- */
 @media only screen and (max-width: 900px) {
-
-  /* block grids on small screens */
-  .s-bgrid-sixths [class*="column"]   { width: 16.66667%; }
-  .s-bgrid-quarters [class*="column"] { width: 25%; }
-  .s-bgrid-thirds [class*="column"]   { width: 33.33333%; }
-  .s-bgrid-halves [class*="column"]   { width: 50%; }
-
-  /* block grids left clearing */
-  .first { clear: none; }
-  .s-first { clear: left; }
 
 }
 
@@ -355,10 +320,35 @@ properly.
 
 /* mobile narrow
 --------------------------------------------------------------- */
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 500px) {
 
   .row { width: auto; }
-
+  .alltabs {display:none;}
+  .mobile-nav {
+    display:flex;
+    overflow: hidden;
+    background-color: #333;
+    padding-right: 5px;
+  }
+  .App-header {
+    justify-content: flex-end;
+  }
+  .nav-icon {
+    background: black;
+    color:white;
+    position: absolute;
+    height: 50px;
+    right: 0;
+    top: 0;
+  }
+  .mobile-tabs {
+    position: absolute;
+    text-align: right;
+    right:10px;
+    top: 50px;
+    padding:5px;
+    background-color: rgba(0,0,0,0.5);
+  }
 }
 
 /* larger screens
@@ -367,4 +357,14 @@ properly.
 
   .wide .row { max-width: 1180px; }
 
+}
+
+/* ------------------------------------------------------------------ */
+/*  Portfolio Section
+/* ------------------------------------------------------------------ */
+
+.intro {
+  /* border-bottom: 1px solid #E8E8E8; */
+  display: flex;
+  align-items: center;
 }
