--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ header {
   display:flex;
   flex:1;
   color: #fff;
-  background: #161415 url(./header.jpg) no-repeat top center;
+  background: #161415 url(./img/header.jpg) no-repeat top center;
   background-size: cover !important;
 	-webkit-background-size: cover !important;
   flex-direction: column;
@@ -86,7 +86,7 @@ h2 { font-size: 28px; line-height: 1.2; margin-bottom: 6px; }
 
 p {
   font-size: calc(2px + 2vmin);
-  line-height: auto;
+  line-height: 130%;
 }
 
 .personal {
@@ -286,7 +286,6 @@ body {
 /* mobile wide/smaller tablets
 --------------------------------------------------------------- */
 @media only screen and (max-width: 767px) {
-
   .row {
     width: 460px;
     margin: 0 auto;
@@ -317,11 +316,27 @@ body {
   .row .offset-10   { margin-left: 0%; }
   .row .offset-11   { margin-left: 0%; }
 }
+@media only screen and (min-width: 500px) {
+  .intro {
+    display: flex;
+    align-items: center;
+  }
+
+  .intro img {
+    max-width: 50%;
+  }
+}
 
 /* mobile narrow
 --------------------------------------------------------------- */
 @media only screen and (max-width: 500px) {
+  .intro {
+    display: block;
+    margin-top: 40px;
+    margin-left: 30px;
 
+  }
+  .intro img { display: none;}
   .row { width: auto; }
   .alltabs {display:none;}
   .mobile-nav {
@@ -363,8 +378,12 @@ body {
 /*  Portfolio Section
 /* ------------------------------------------------------------------ */
 
+/* True regardless of screen size */
 .intro {
-  /* border-bottom: 1px solid #E8E8E8; */
-  display: flex;
-  align-items: center;
+  border-bottom: 1px solid #E8E8E8;
+  line-height: 100%;
+}
+
+.intro div {
+  margin: 8px;
 }
