--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ h2 { font-size: 28px; line-height: 1.2; margin-bottom: 6px; }
   text-align: center;
 }
 
-.home h3, .cse154page h3 {
+.home h3, .cse154page h3, .projects h3 {
   font: 1em 'librebaskerville-regular', serif;
   color: rgb(255, 255, 255);
   margin: 0 auto;
@@ -105,12 +105,12 @@ p {
 /* CSE 154 About Page Section
 /* ------------------------------------------------------------------ */
 
-.cse154page {
+.cse154page, .projects {
   margin: 10px;
   font-size: calc(4px + 2vmin);
 }
 
-.cse154page h3, .intro h1, .personal h1 {
+.cse154page h3, .intro h1, .personal h1, .projects h3 {
   font: 2em 'librebaskerville-regular', serif;
   color: black;
   text-decoration: underline;
@@ -118,19 +118,19 @@ p {
   margin-top: 5px;
 }
 
-.cse154page .row {
+.cse154page .row, .projects .row {
   padding-bottom: 10px;
   padding-top: 10px;
   border-bottom: 1px solid #E8E8E8;
 }
 
-.cse154page h1 {
+.cse154page h1, .projects h1 {
   font: 18px/24px 'opensans-bold', sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
   line-height: 200%;
 }
-.cse154page h1 span {
+.cse154page h1 span, .projects h1 span {
   border-bottom: 3px solid #11ABB0;
   padding-bottom: 6px;
 }
@@ -320,6 +320,7 @@ body {
   .intro {
     display: flex;
     align-items: center;
+
   }
 
   .intro img {
@@ -333,10 +334,9 @@ body {
   .intro {
     display: block;
     margin-top: 40px;
-    margin-left: 30px;
-
   }
   .intro img { display: none;}
+  .intro div { margin: 10px 10px 10px 0px;}
   .row { width: auto; }
   .alltabs {display:none;}
   .mobile-nav {
@@ -382,8 +382,29 @@ body {
 .intro {
   border-bottom: 1px solid #E8E8E8;
   line-height: 100%;
+  margin-bottom: 10px;
 }
 
 .intro div {
-  margin: 8px;
+  margin-left: 20px;
+  max-width: 600px;
+}
+
+.cse154page article, .projects article {
+  display: flex;
+  justify-content: center;
+}
+
+.cse154page article p, .projects article p {
+  max-width: 700px;
+}
+
+iframe {
+  width: 100%;
+  height: 300px;
+}
+
+.projects img {
+  width: 100%;
+  height: auto;
 }
